statsig-dotnet/src/Statsig/StatsigFFI.g.cs

// <auto-generated>
// This code is generated by csbindgen.
// DON'T CHANGE THIS DIRECTLY.
// </auto-generated>
#pragma warning disable CS8500
#pragma warning disable CS8981
using System;
using System.Runtime.InteropServices;


namespace Statsig
{
    internal static unsafe partial class StatsigFFI
    {
        const string __DllName = "libstatsig_ffi";



        [DllImport(__DllName, EntryPoint = "statsig_options_create", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern ulong statsig_options_create(byte* specs_url, byte* log_event_url, ulong specs_adapter_ref, ulong event_logging_adapter_ref, byte* environment, int _event_logging_flush_interval_ms, int event_logging_max_queue_size, int specs_sync_interval_ms, byte* output_log_level, int disable_country_lookup, int disable_user_agent_parsing, int wait_for_country_lookup_init, int wait_for_user_agent_init, int enable_id_lists, byte* id_lists_url, int id_lists_sync_interval_ms);

        [DllImport(__DllName, EntryPoint = "statsig_options_release", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void statsig_options_release(ulong options_ref);

        [DllImport(__DllName, EntryPoint = "statsig_user_create", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern ulong statsig_user_create(byte* user_id, byte* custom_ids_json, byte* email, byte* ip, byte* user_agent, byte* country, byte* locale, byte* app_version, byte* custom_json, byte* private_attributes_json);

        [DllImport(__DllName, EntryPoint = "statsig_user_release", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void statsig_user_release(ulong user_ref);

        [DllImport(__DllName, EntryPoint = "statsig_create", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern ulong statsig_create(byte* sdk_key, ulong options_ref);

        [DllImport(__DllName, EntryPoint = "statsig_release", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void statsig_release(ulong statsig_ref);

        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        internal delegate void statsig_initialize_callback_delegate();

        [DllImport(__DllName, EntryPoint = "statsig_initialize", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void statsig_initialize(ulong statsig_ref, statsig_initialize_callback_delegate callback);

        [DllImport(__DllName, EntryPoint = "statsig_initialize_with_details", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* statsig_initialize_with_details(ulong statsig_ref);

        [DllImport(__DllName, EntryPoint = "statsig_initialize_blocking", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void statsig_initialize_blocking(ulong statsig_ref);

        [DllImport(__DllName, EntryPoint = "statsig_shutdown_blocking", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void statsig_shutdown_blocking(ulong statsig_ref);

        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        internal delegate void statsig_flush_events_callback_delegate();

        [DllImport(__DllName, EntryPoint = "statsig_flush_events", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void statsig_flush_events(ulong statsig_ref, statsig_flush_events_callback_delegate callback);

        [DllImport(__DllName, EntryPoint = "statsig_flush_events_blocking", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void statsig_flush_events_blocking(ulong statsig_ref);

        [DllImport(__DllName, EntryPoint = "statsig_get_current_values", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* statsig_get_current_values(ulong statsig_ref);

        [DllImport(__DllName, EntryPoint = "statsig_log_event", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void statsig_log_event(ulong statsig_ref, ulong user_ref, byte* event_json);

        [DllImport(__DllName, EntryPoint = "statsig_identify", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void statsig_identify(ulong statsig_ref, ulong user_ref);

        [DllImport(__DllName, EntryPoint = "statsig_get_client_init_response", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* statsig_get_client_init_response(ulong statsig_ref, ulong user_ref, byte* options_json);

        [DllImport(__DllName, EntryPoint = "statsig_check_gate", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool statsig_check_gate(ulong statsig_ref, ulong user_ref, byte* gate_name, byte* options_json);

        [DllImport(__DllName, EntryPoint = "statsig_get_feature_gate", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* statsig_get_feature_gate(ulong statsig_ref, ulong user_ref, byte* gate_name, byte* options_json);

        [DllImport(__DllName, EntryPoint = "statsig_manually_log_gate_exposure", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void statsig_manually_log_gate_exposure(ulong statsig_ref, ulong user_ref, byte* gate_name);

        [DllImport(__DllName, EntryPoint = "statsig_get_dynamic_config", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* statsig_get_dynamic_config(ulong statsig_ref, ulong user_ref, byte* config_name, byte* options_json);

        [DllImport(__DllName, EntryPoint = "statsig_manually_log_dynamic_config_exposure", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void statsig_manually_log_dynamic_config_exposure(ulong statsig_ref, ulong user_ref, byte* config_name);

        [DllImport(__DllName, EntryPoint = "statsig_get_experiment", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* statsig_get_experiment(ulong statsig_ref, ulong user_ref, byte* experiment_name, byte* options_json);

        [DllImport(__DllName, EntryPoint = "statsig_manually_log_experiment_exposure", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void statsig_manually_log_experiment_exposure(ulong statsig_ref, ulong user_ref, byte* experiment_name);

        [DllImport(__DllName, EntryPoint = "statsig_get_layer", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* statsig_get_layer(ulong statsig_ref, ulong user_ref, byte* layer_name, byte* options_json);

        [DllImport(__DllName, EntryPoint = "statsig_log_layer_param_exposure", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void statsig_log_layer_param_exposure(ulong statsig_ref, byte* layer_json, byte* param_name);

        [DllImport(__DllName, EntryPoint = "statsig_manually_log_layer_parameter_exposure", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void statsig_manually_log_layer_parameter_exposure(ulong statsig_ref, ulong user_ref, byte* layer_name, byte* param_name);

        [DllImport(__DllName, EntryPoint = "statsig_metadata_update_values", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void statsig_metadata_update_values(byte* sdk_type, byte* os, byte* arch, byte* language_version);


    }



}
